syntax = "proto3";

import "commonmodels/error/error.proto";
import "commonmodels/chat/chat.proto";

package rys.ajaxpetproject.request.chat.delete.proto;

option java_multiple_files = true;

message ChatDeleteRequest {
  string requestId = 1;
}

message ChatDeleteResponse {
  oneof response {
    Success success = 1;

    Failure failure = 2;
  }

  message Success {
    bool result = 1;
  }

  message Failure {
    string message = 1;

    oneof error {
      commonmodels.error.proto.Error internal_error = 2;

      commonmodels.error.proto.Error not_found = 3;
    }
  }
}
