syntax = "proto3";

import "commonmodels/error/error.proto";
import "commonmodels/chat/chat.proto";

package rys.ajaxpetproject.request.findAll.create.proto;

option java_multiple_files = true;

message ChatFindAllRequest {
}

message ChatFindAllResponse {
  oneof response {
    Success success = 1;

    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.chat.proto.Chat result = 1;
  }

  message Failure {
    optional string message = 1;

    oneof error {
      commonmodels.error.proto.Error internal_error = 2;

      commonmodels.error.proto.Error not_found = 3;
    }
  }
}
